remove(mvn): poi-schema && add commands to readme